VQ-1386: Quotation Clean up

--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
@@ -119,3 +119,12 @@
     .point{
         cursor: pointer;
     }
+
+    ul{
+        list-style-type: none;
+        cursor: pointer ;
+    }
+    ul li a.active {
+        color: #00529b;
+      }
+      
