VQ-1392:Improve appearance of the Horizontal stepper and Quick quote Unit test

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -131,7 +131,8 @@
                             <label for="Branch" class="quote-label" id="Branch">Branch</label>
                             <!-- <input type="text" id="quote-input" class="form-control form-control-sm mb-1"  formControlName="branchCode"[(ngModel)]="userBranchId "  >      -->
                             <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
-                                formControlName="branchCode" [value]="userBranchId ">
+                                formControlName="branchCode" [value]="userBranchId " [(ngModel)]="userBranchName"
+                                readonly>
 
                         </div>
                         <div class="col-sm-4 col-6">
