--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -48,12 +48,7 @@
                     <option *ngFor="let subclass of allMatchingSubclasses" [value]="subclass.code">{{subclass.description}}</option>
                   </select>
                 </div>
-                <!-- <div class="col-4">
-                  <label for="minmax-buttons" id="quote-label">Vehicle Make</label>
-                  <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input"  (change)="onVehicleMakeSelected($event)" >
-                    <option *ngFor="let vehicleMake of vehicleMakeList" [value]="vehicleMake">{{vehicleMake.name}}</option>
-                  </select>
-                </div> -->
+             
                 <div class="col-4">
                   <label for="minmax-buttons" id="quote-label">Vehicle Make</label>
                   <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" (change)="onVehicleMakeSelected($event)">
@@ -75,7 +70,7 @@
               <div class="col-4">
                 <label for="minmax-buttons" id="quote-label">Risk ID</label>
                   <!-- <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="propertyId" [(ngModel)]="passedRiskId" (change)="riskIdPassed()">   -->
-                  <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="propertyId" (input)="riskIdPassed($event)">
+                  <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="propertyId" (input)="riskIdPassed($event)" placeholder="KAA 123X">
 
             </div>
             <div class="col-4">
