--- a/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.css
+++ b/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.css
@@ -1,6 +1,6 @@
 .container {
     width: 1216px;
-    max-height: 1354px;
+    max-height: 2000%;
     flex-shrink: 0;
     background: #FFF;
 }
@@ -192,6 +192,14 @@ p-multiSelect {
         white-space: nowrap;
     }
 
+    .p-datatable .p-datatable-thead>tr>td {
+        white-space: nowrap;
+    }
+
+    .p-datatable .p-datatable-tbody>tr>td {
+        white-space: nowrap;
+    }
+
     .p-datatable-thead {
         border-radius: 4px 0px 0px 0px;
         background: #BAD0E4;
@@ -241,18 +249,36 @@ td {
     position: relative;
 }
 
-.ellipsis-container {
+/* .ellipsis-container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* display: none; */
+} */
+.ellipsis-container {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0, -50%);
 }
 
-td:hover .ellipsis-container {
+/* td:hover .ellipsis-container {
     display: block;
-}
+} */
 
+/* .details-button {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    white-space: nowrap;
+    align-items: center;
+    border-radius: 4px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10);
+} */
 .details-button {
     display: none;
     position: absolute;
@@ -261,8 +287,6 @@ td:hover .ellipsis-container {
     transform: translate(-50%, -50%);
     z-index: 1;
     white-space: nowrap;
-
-    /* padding: 14px 39px 15px 12px; */
     align-items: center;
     border-radius: 4px;
     background: #FFF;
@@ -344,6 +368,10 @@ td:hover .ellipsis-container {
 
 .stepper {
     background-color: #F5F6F8;
+}
+
+#table-align {
+    padding-left: 10px;
 }
 
 @media screen and (max-width: 800px) {
